# Empire_Aviation_Email_Triage_Automation

./: Readme.md  index.html
fastapi_template/: ARCHITECTURE_DOCUMENT.md  README.md  SIMPLE_DEPLOYMENT_GUIDE.md  email_inbox_processor.py  embassy_mailbot.db  pyproject.toml  quick_email_test.py  run_simple.py  simple_requirements.txt  standalone_demo.py
fastapi_template/app/: __init__.py  config.py  main.py  simple_main.py
fastapi_template/app/classifier/: __init__.py  ml_classifier.py  rules.yaml  rules_engine.py
fastapi_template/app/connectors/: __init__.py  email_graph.py  email_imap.py  email_smtp.py  twilio_sms.py
fastapi_template/app/escalation/: __init__.py  contacts.json  contacts.py  engine.py  scheduler.py
fastapi_template/app/models/: __init__.py  activity.py  database.py  email.py  escalation.py  message_state.py  ticket.py
fastapi_template/app/services/: __init__.py  monitoring.py  pipeline.py  reporting.py
fastapi_template/app/storage/: csv_storage.py
fastapi_template/app/utils/: __init__.py  logging.py  security.py  validation.py
fastapi_template/aviation_data/: processed_emails.csv  processing_summary.csv  support_tickets.csv
fastapi_template/jobs/: __init__.py  escalation_worker.py  generate_reports.py  poll_inboxes.py
fastapi_template/quick_test_data/: aviation_email_test_20250818_102959.csv
fastapi_template/tests/: __init__.py  conftest.py
fastapi_template/tests/unit/: test_classifier.py  test_models.py
